--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<ul>
 			<li>sync.egoing</li>
 			<li>introduce Git</li>
+			<li>안정적저장소</li>
 			<li>version</li>
 			<li>Branch</li>
 			<li>브랜치</li>
@@ -29,3 +30,4 @@
 			<li>추카</li>
 		</ul>
 	</body>
+</html>
